<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.1</version>
  <description>The simulation package</description>
  <maintainer email="argus@todo.todo">argus</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
